# rusty-radar

./: Cargo.toml
src/: antenna.rs  array_ext.rs  geodesic_polyhedron.rs  helper.rs  helper_traits.rs  lib.rs  radar.rs  scene.rs  series_chart.rs  signal.rs  spherical_vis.rs
src/signal/: fft.rs  fir.rs  iir.rs  realization.rs  scalar.rs
