[package]
edition = "2018"
name = "radar"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "radar_lib"
path = "src/lib.rs"

[dependencies]
approx = {version = "0.5.0", features = ["num-complex"]}
bevy = "0.5"
bevy-orbit-controls = "2.0.0"
iced = {version = "0.3", features = ["canvas", "tokio"]}
nalgebra = "0.28.0"
ndarray = {version = "0.15.0", features = ["approx"]}
num = "0.4.0"
plotters = "0.3"
plotters-iced = "0.1"
rand = "0.8.4"
rand_distr = "0.4.1"
rustfft = "6.0.1"

[profile.release]
debug = true

[patch.crates-io]
ndarray = {path = "../ndarray"}
